# CampusLostandFound

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/client/: NetworkClient.cpp  NetworkClient.hpp
src/models/: Feedback.hpp  FeedbackManager.cpp  FeedbackManager.hpp  ItemReport.hpp  MatchingEngine.cpp  MatchingEngine.hpp  Message.hpp  MessageManager.cpp  MessageManager.hpp  ReportManager.cpp  ReportManager.hpp  RewardManager.cpp  RewardManager.hpp  RewardOffer.hpp  User.hpp  UserManager.cpp  UserManager.hpp
src/server/: Server.cpp  Server.hpp  Server.hpp.save  main.cpp
src/shared/: Protocol.hpp
src/ui/: FeedbackWindow.cpp  FeedbackWindow.hpp  Gate4Dashoboard.cpp  Gate4Dashoboard.hpp  LoginWindow.cpp  LoginWindow.hpp  LoginWindow.hpp.save  MainWindow.cpp  MainWindow.h  MessagingWindow.cpp  MessagingWindow.hpp  RewardWindow.cpp  RewardWindow.hpp  StatisticsWindow.cpp  StatisticsWindow.hpp  StudentDashboard.cpp  StudentDashboard.hpp
tests/: CMakeLists.txt  test_MatchingEngine.cpp  test_ReportManager.cpp  test_UserManager.cpp
